TSVPORTAL-9752 - Fixed some errors

--- a/app/views/directives/error-dialog.html
+++ b/app/views/directives/error-dialog.html
@@ -81,7 +81,8 @@
         <span ng-switch-when="024">Item Qty Limit Per Shop should be greater than Item Qty Limit Per Transaction which should be greater than item Qty Limit Per Seat. Amount Limit per Shop should be greater than Amount Limit Per Transaction.</span>
         <span ng-switch-when="025">Invalid Value.</span>
         <span ng-switch-when="026">This field is not allowed for the given request and should be set to null</span>
-        <span ng-switch-when="034">Effective Date cannot be earlier than current date.</span>
+        <span ng-switch-when="028">Effective Date cannot be earlier than current date</span>
+        <span ng-switch-when="034">Effective Date cannot be earlier than current date</span>
         <span ng-switch-when="201">Date is not in the correct format.</span>
         <span ng-switch-when="202">Price is not in the correct format.</span>
         <span ng-switch-when="203">Numeric value is expected.</span>
