--- a/app/views/menu-edit.html
+++ b/app/views/menu-edit.html
@@ -45,7 +45,7 @@
     <div class="form-group col-sm-3">
       <label>Menu Code *</label>
       <input custom-pattern="alphanumeric"
-             custom-validity
+      		 custom-validity
              required
              type="text"
              maxlength="20"
@@ -53,14 +53,13 @@
              name="menuCode"
              ng-model="menu.menuCode"
              placeholder="Alphanumeric Only"
-             ng-readonly="isMenuReadOnly()"
-             ui-on-Drop=""/>
+             ng-readonly="isMenuReadOnly()"/>
     </div>
 
     <div class="form-group col-sm-3">
       <label>Menu Name *</label>
       <input custom-pattern="alphanumericSpaces"
-             custom-validity
+      		 custom-validity
              required
              type="text"
              maxlength="25"
@@ -68,31 +67,30 @@
              name="menuName"
              ng-model="menu.menuName"
              placeholder="Alphanumeric Space"
-             ng-readonly="isMenuReadOnly()"
-             ui-on-Drop=""/>
+             ng-readonly="isMenuReadOnly()"/>
     </div>
 
-    <div class="col-xs-12 col-sm-3 col-md-3" ui-on-Drop="">
-      <date-picker-field
-        ng-if="!isMenuReadOnly()"
-        name="startDate"
-        ng-model="menu.startDate"
-        label="Effective From"
-        min-date="minDate"
-        required="true">
-      </date-picker-field>
+      <div class="col-xs-12 col-sm-3 col-md-3">
+        <date-picker-field
+          ng-if="!isMenuReadOnly()"
+          name="startDate"
+          ng-model="menu.startDate"
+          label="Effective From"
+          min-date="minDate"
+          required="true">
+        </date-picker-field>
 
-      <date-picker-field
-        ng-if="isMenuReadOnly()"
-        name="startDate"
-        ng-model="menu.startDate"
-        label="Effective From"
-        disable="true"
-        required="true">
-      </date-picker-field>
-    </div>
+        <date-picker-field
+          ng-if="isMenuReadOnly()"
+          name="startDate"
+          ng-model="menu.startDate"
+          label="Effective From"
+          disable="true"
+          required="true">
+        </date-picker-field>
+      </div>
 
-    <div class="col-xs-12 col-sm-3 col-md-3" ui-on-Drop="">
+      <div class="col-xs-12 col-sm-3 col-md-3" ui-on-Drop="">
         <date-picker-field
           ng-if="isCurrentEffectiveDate(menu)"
           name="endDate"
@@ -124,8 +122,7 @@
              name="menuDescription"
              ng-model="menu.description"
              placeholder="ITM001"
-             ng-readonly="isMenuReadOnly()"
-             ui-on-Drop=""/>
+             ng-readonly="isMenuReadOnly()"/>
     </div>
 
     <h3>Menu Items
@@ -133,6 +130,7 @@
         <i class="fa fa-plus"></i> Add Item
       </button>
     </h3>
+
     <div class="table">
       <table class="table table-bordered table-hover">
         <thead>
