TSVPORTAL-9753: TSVPORTAL-10647: fixed label name

--- a/app/views/survey-catalog-create.html
+++ b/app/views/survey-catalog-create.html
@@ -17,7 +17,7 @@
 					<div class="row">
 					   <div class="col-xs-12 col-sm-4">
 							<div class="form-group">
-								<label for="catalogName">Survey Name*</label>
+								<label for="catalogName">Survey Catalog Name*</label>
 								<input ng-model="surveyCatalog.catalogName" type="text" ng-disabled="isDisabled()"
 									class="form-control" id="catalogName" name="catalogName" required
 									maxlength="25" placeholder="Survey Catalog Name">
