--- a/app/views/stock-owner-item-create.html
+++ b/app/views/stock-owner-item-create.html
@@ -79,7 +79,9 @@
 						<input-text label="Stock Owner Item Name" name="itemName" required="true"  pattern="regexp.alphaWithSpecialCharMenuItem" placeholder="Cool New Item" min-length="1" max-length="40"></input-text>
 
 						<input-textarea label="Item Description" name="desc" required="true" pattern="regexp.alphaWithSpecialCharMenuItem" placeholder="A simple description..." min-length="1" max-length="255"></input-textarea>
-
+						
+						<input-text label="ePOS Quick Search Code" name="quickSearchCode" pattern="regexp.alphanumeric" placeholder="ePOS Quick Search Code" max-length="15"></input-text>
+                          
 						<input-text label="Keywords" name="keywords" pattern="regexp.word" placeholder="cool new item" max-length="500"></input-text>
 
 						<input-text label="Unique Selling Point" name="sellingPoint" pattern="regexp.word" placeholder="This item is really cool" max-length="100"></input-text>
