--- a/app/views/stock-owner-item-list.html
+++ b/app/views/stock-owner-item-list.html
@@ -78,7 +78,14 @@
                        label-from="Effective From"
                        label-to="Effective To">
           </date-picker>
-
+		 
+		 <div class="col-xs-12 col-sm-6 col-md-4">
+              <div class="form-group">
+                <label for="quick-search-code">ePOS Quick Search Code</label>
+				<input ng-model="search.quickSearchCode" type="text" class="form-control" id="quick-search-code" placeholder="ePOS Quick Search Code">
+              </div>
+         </div>
+            
         </div>
 
         <div class="panel-footer text-right">
