TSVPORTAL-9751 | Modify to allow only currentdate + 1

--- a/app/views/survey-create.html
+++ b/app/views/survey-create.html
@@ -30,7 +30,7 @@
 									label="Effective Start Date"
 									disable="isDisabled()"
 									required="true"
-									end-current-effective="!viewEditItem"
+									disable-past="true"
 									ng-model="survey.startDate">
 								</date-picker-field>
 							</div>
