TSVPORTAL-10662 | Modified placement of Create Survey button.

--- a/app/views/survey.html
+++ b/app/views/survey.html
@@ -9,13 +9,13 @@
 
   <div class="survey-data-list">
     <div class="row">
-      <div class="col-xs-12 text-left">
+      <div class="col-xs-12 text-right">
         <a href="#/survey/create" class="btn btn-primary">+ <span class="hidden-xs">Create Survey</span></a>
-        <button class="btn btn-default pull-right" data-toggle="collapse" data-target="#search-collapse"
+        <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse"
                 aria-expanded="false"
                 aria-controls="search-collapse">
           <span class="fa fa-search" aria-hidden="true"></span>
-          <span class="hidden-xs">Search</span>
+          <span class="hidden-xs">Filter</span>
         </button>
       </div>
     </div>
