--- a/app/views/survey-catalog.html
+++ b/app/views/survey-catalog.html
@@ -71,7 +71,7 @@
               <i class="fa fa-pencil"></i>
             </button>
             <button class="btn btn-danger btn-xs"
-                    ng-click="deleteRecordDialog(surveyCatalogs[$index], ['catalogName', 'startDate', 'endDate'])"
+                    ng-click="deleteRecordDialog(surveyCatalogs[$index], ['surveyCatalogName', 'startDate', 'endDate'])"
                     tabindex="0"
                     ng-show="showDeleteButton(surveyCatalog.startDate)">
               <i class="fa fa-trash"></i>
