TSVPORTAL-9753: TSVPORTAL-10651: changed survey catalog name input to be surveyCatalogName

--- a/app/views/survey-catalog-create.html
+++ b/app/views/survey-catalog-create.html
@@ -17,9 +17,9 @@
 					<div class="row">
 					   <div class="col-xs-12 col-sm-4">
 							<div class="form-group">
-								<label for="catalogName">Survey Catalog Name*</label>
+								<label for="surveyCatalogName">Survey Catalog Name*</label>
 								<input ng-model="surveyCatalog.catalogName" type="text" ng-disabled="isDisabled()"
-									class="form-control" id="catalogName" name="catalogName" required
+									class="form-control" id="surveyCatalogName" name="surveyCatalogName" required
 									maxlength="25" placeholder="Survey Catalog Name">
 							</div>
 						</div>
