TSVPORTAL-9752 - Fixed error message

--- a/app/views/survey-questions-create.html
+++ b/app/views/survey-questions-create.html
@@ -141,7 +141,7 @@
                 </td>
                 <td>
                   <input ng-model="item.choiceName" type="text" ng-disabled="isDisabled()"
-                         class="form-control"  name="selectedChoices[{{$index + 1}}]"
+                         class="form-control"  name="choice"
                          required  maxlength="25" placeholder="Choice">
                 </td>
                 <td ng-hide="isDisabled()">
