TSVPORTAL-9753: TSVPORTAL-10690: invalid drop down text

--- a/app/views/survey-catalog-create.html
+++ b/app/views/survey-catalog-create.html
@@ -83,7 +83,7 @@
 						<select required name="survey" id="survey[{{item.surveyIndex}}]" class="form-control"
 							ng-options="survey.id as survey.surveyName for survey in surveyList"
 							ng-model="item.surveyId" ng-disabled="isDisabled()">
-							<option value="">Select Survey Question...</option>
+							<option value="">Select Survey ...</option>
 						</select>
 					  </td>
 					  <td ng-hide="isDisabled()" style="text-align:center;">
