TSVPORTAL-9752 - Fixed grid header

--- a/app/views/survey-questions-list.html
+++ b/app/views/survey-questions-list.html
@@ -47,7 +47,7 @@
   </div>
   <br>
   <div class="table-responsive">
-    <table infinite-scroll="loadSurveyQuestions()" class="table table-bordered table-hover ng-scope" ng-show="surveyQuestions.length > 0">
+    <table infinite-scroll="loadSurveyQuestions()" class="table table-bordered table-hover ng-scope">
       <thead>
       <tr>
         <th>Question</th>
