TSVPORTAL-9753: TSVPORTAL-10663: updated colapsing search label name

--- a/app/views/survey-catalog.html
+++ b/app/views/survey-catalog.html
@@ -14,7 +14,7 @@
                 aria-expanded="false"
                 aria-controls="search-collapse">
           <span class="fa fa-search" aria-hidden="true"></span>
-          <span class="hidden-xs">Search</span>
+          <span class="hidden-xs">Filter</span>
         </button>
       </div>
     </div>
