--- a/app/views/survey-catalog.html
+++ b/app/views/survey-catalog.html
@@ -1,23 +1,19 @@
 <div class="module-container">
-  <div class="edit-controls">
-    <div class="row">
-      <div class="col-xs-12">
-        <h2 class="view-name">{{ viewName }}</h2>
-      </div>
+  <div class="row item-list-row">
+    <div class="col-xs-4">
+      <h2 class="view-name">{{ viewName }}</h2>
+    </div>
+    <div class="col-xs-8 text-right">
+      <a href="#/survey-catalog/create" class="btn btn-primary">+ <span class="hidden-xs">Create Survey Catalog</span></a>
+      <button class="btn btn-default" data-toggle="collapse" data-target="#search-collapse"
+              aria-expanded="false"
+              aria-controls="search-collapse">
+        <span class="fa fa-search" aria-hidden="true"></span>
+        <span class="hidden-xs">Filter</span>
+      </button>
     </div>
   </div>
   <div class="survey-data-list">
-    <div class="row">
-      <div class="col-xs-12 text-left">
-        <a href="#/survey-catalog/create" class="btn btn-primary">+ <span class="hidden-xs">Create Survey Catalog</span></a>
-        <button class="btn btn-default pull-right" data-toggle="collapse" data-target="#search-collapse"
-                aria-expanded="false"
-                aria-controls="search-collapse">
-          <span class="fa fa-search" aria-hidden="true"></span>
-          <span class="hidden-xs"><Filter></Filter></span>
-        </button>
-      </div>
-    </div>
     <div class="panel panel-default no-transition" id="search-collapse">
       <form name="surveySearchForm" ng-submit="searchSurveyCatalogData()">
         <div class="panel-body">
