--- a/app/views/company-create.html
+++ b/app/views/company-create.html
@@ -194,7 +194,7 @@
 
             <select ng-model="formData.baseCurrencyId" class="form-control">
               <option ng-selected="isSelected(formData.baseCurrencyId, currency.id)"
-                      ng-repeat="currency in currencies | orderBy:'code'"
+                      ng-repeat="currency in currencies | unique: 'code' | orderBy:'code'"
                       value="{{currency.id}}">
                 {{ currency.code }} - {{ currency.name }}
               </option>
@@ -246,19 +246,19 @@
           <div class="col-xs-12 col-sm-6">
             <div ng-show="isCompanyRetail" ng-if="isCompanyRetail">
                 <label>Back Office Default Language*</label>
-                                <select ng-model="formData.defaultLanguage" class="form-control" id="backOfficeDefaultLanguage" 
+                                <select ng-model="formData.defaultLanguage" class="form-control" id="backOfficeDefaultLanguage"
                                 name="backOfficeDefaultLanguage" ng-change="onChangeDefaultLanguage()" required="true">
                                     <option value="{{ lng.id }}" ng-repeat="lng in defaultLanguages | orderBy:'languageName'">{{ lng.languageName }}</option>
                                 </select>
             </div>
             <div ng-show="!isCompanyRetail" ng-if="!isCompanyRetail">
                 <label>Default Language*</label>
-                                <select ng-model="formData.defaultLanguage" class="form-control" id="defaultLanguage" 
+                                <select ng-model="formData.defaultLanguage" class="form-control" id="defaultLanguage"
                                 name="defaultLanguage" ng-change="onChangeDefaultLanguage()" required="true">
                                     <option value="{{ lng.id }}" ng-repeat="lng in defaultLanguages | orderBy:'languageName'">{{ lng.languageName }}</option>
                                 </select>
             </div>
-            
+
             <label ng-show="isCompanyRetail">Back Office Additional Language</label>
             <label ng-show="!isCompanyRetail">Additional Language</label>
             <ui-select multiple ng-model="formData.languages" theme="bootstrap" on-remove="onChangeAdditionalLanguage()" on-select="onChangeAdditionalLanguage()" >
@@ -273,11 +273,11 @@
 
           <div class="col-xs-12 col-sm-6" ng-show="isCompanyRetail" ng-if="isCompanyRetail">
              <label>ePOS Default Language*</label>
-                                <select ng-model="formData.defaultEposLanguage" class="form-control" id="defaultEposLanguage" 
+                                <select ng-model="formData.defaultEposLanguage" class="form-control" id="defaultEposLanguage"
                                 id="eposDefaultLanguage" name="eposDefaultLanguage" ng-change="onChangeEposDefaultLanguage()" required="true">
                                     <option value="{{ eposlng.id }}" ng-repeat="eposlng in defaultEposLanguages | orderBy:'languageName'">{{ eposlng.languageName }}</option>
                                 </select>
- 
+
               <label>ePOS Additional Language</label>
               <ui-select multiple ng-model="formData.eposLanguages" theme="bootstrap" on-remove="onChangeEposAdditionalLanguage()" on-select="onChangeEposAdditionalLanguage()" >
                 <ui-select-match placeholder="Languages">{{ $item.languageName }}
