--- a/app/views/reconciliation-dashboard.html
+++ b/app/views/reconciliation-dashboard.html
@@ -252,7 +252,7 @@
                   ng-show="doesInstanceContainAction(instance, 'Unconfirm')" ng-click="showExecuteActionModal(instance, 'Unconfirm')">Unconfirm
           </button>
           <button class="btn btn-info btn-xs btn-block" tabindex="0"
-                  ng-show="doesInstanceContainAction(instance, 'Reports')" ng-click="viewReview(instance)"><i class="fa fa-file-text-o"></i>
+                  ng-show="doesInstanceContainAction(instance, 'Reports')" ng-click="viewView(instance)"><i class="fa fa-file-text-o"></i>
           </button>
           <button class="btn btn-primary btn-xs btn-block" tabindex="0"
                   ng-show="doesInstanceContainAction(instance, 'ForceReconcile')" ng-click="forceReconcile(instance, 'ForceReconcile')">Force Reconcile
