--- a/app/views/item-create.html
+++ b/app/views/item-create.html
@@ -97,7 +97,7 @@
 
               <input-text label="POS Display Name" name="onBoardName" required="form.$submitted" pattern="regexp.alphaWithSpecialCharMenuItem"
                           placeholder="New Item" min-length="1" max-length="30"></input-text>
-                          
+
               <input-text label="ePOS Quick Search Code" name="quickSearchCode" pattern="regexp.alphanumeric"
                           placeholder="ePOS Quick Search Code" max-length="15"></input-text>
 
@@ -338,7 +338,7 @@
                 <div class="form-group col-md-12" ng-class="{ 'has-error' : !formData.supplierCompanyId && displayError , 'has-success' : formData.supplierCompanyId }">
                   <label>Supplier</label>
                   <select name="supplierCompanyId" ng-model="formData.supplierCompanyId" convert-to-number class="form-control col-xs-2" ng-change="onSupplierCompanyChange()" ng-init="onSupplierCompanyChange()" >
-                    <option ng-repeat="supplier in supplierCompanies" value="{{supplier.relativeCompanyId}}">
+                    <option ng-repeat="supplier in supplierCompanies | orderBy:'relativeCompany'" value="{{supplier.relativeCompanyId}}">
                       {{ supplier.relativeCompany }}
                     </option>
                   </select>
