TSVPORTAL-10591 - Fixed conflict with master

--- a/app/views/directives/error-dialog.html
+++ b/app/views/directives/error-dialog.html
@@ -84,6 +84,7 @@
         <span ng-switch-when="027">Date cannot be after than current date.</span>
         <span ng-switch-when="028">Effective To date is selected less than Effective From Date.</span>
         <span ng-switch-when="034">Effective Date cannot be earlier than current date.</span>
+        <span ng-switch-when="034">Effective Date cannot be earlier than current date</span>
         <span ng-switch-when="201">Date is not in the correct format.</span>
         <span ng-switch-when="202">Price is not in the correct format.</span>
         <span ng-switch-when="203">Numeric value is expected.</span>
