--- a/app/views/post-trip-data-list.html
+++ b/app/views/post-trip-data-list.html
@@ -119,6 +119,8 @@
         <th>Departure Time</th>
         <th>Arrival Station</th>
         <th>Arrival Time</th>
+        <th>Updated Date/Time</th>
+        <th>Updated User</th>
         <th>Actions</th>
       </tr>
       </thead>
@@ -130,6 +132,8 @@
         <td>{{ trip.depTime }}</td>
         <td>{{ trip.arrStationCode}}</td>
         <td>{{ trip.arrTime }}</td>
+        <td>{{ getUpdatedOn(trip) }}</td>
+        <td>{{ getUpdateBy(trip) }}</td>
         <td>
           <button class="btn btn-info btn-xs" ng-click="redirectToPostTrip(trip.id, 'view')" tabindex="0">
             <i class="fa fa-file"></i>
