--- a/app/views/transaction-list.html
+++ b/app/views/transaction-list.html
@@ -124,6 +124,7 @@
               end-date-model="search.transactionEndDate"
               label-from="Effective From *"
               label-to="Effective To *"
+              required="true"
               is-search-field="true">
             </date-picker>
 
@@ -291,6 +292,9 @@
   </table>
     </div>
   <p class="loading-more alert alert-info text-center"><i class="fa fa-spin fa-circle-o-notch"></i> Loading more...</p>
+  <alert ng-show="transactions.length == 0 && isSearch" type="info">
+  	<span class="fa fa-flag"></span> Your search returned no results.
+  </alert>
 </div>
 <dynamic-left-nav></dynamic-left-nav>
 
