--- a/app/views/menu-list.html
+++ b/app/views/menu-list.html
@@ -92,6 +92,9 @@
         <button class="btn btn-primary btn-xs" ng-click="editMenu(menu)" ng-show="isMenuEditable(menu)">
           <i class="fa fa-pencil"></i>
         </button>
+        <button class="btn btn-warning btn-xs" ng-click="copyMenu(menu)">
+          <i class="fa fa-copy"></i>
+        </button>
         <button class="btn btn-danger btn-xs" ng-click="showDeleteConfirmation(menu)" ng-hide="isMenuReadOnly(menu)">
           <i class="fa fa-trash"></i>
         </button>
