TSVPORTAL-10755: fetching cashHandler comapny if it is present in cashbag

--- a/app/views/reconciliation-cash-bag.html
+++ b/app/views/reconciliation-cash-bag.html
@@ -32,7 +32,7 @@
       <div class="panel-heading">
         <div class="row">
           <div class="col-sm-6">
-            <div>Cash Handler Base Currency: {{ currencyCodes[cashHandlerCompany.baseCurrencyId] }}</div>
+            <div>Cash Handler Base Currency: {{ getCashHandlerBaseCurrencyCode() }}</div>
             <div>Airline Base Currency: {{ currencyCodes[company.baseCurrencyId] }}</div>
           </div>
           <div class="col-sm-6 text-right">
