TSVPORTAL-10755: changed dynamic left menu

--- a/app/views/reconciliation-cash-bag.html
+++ b/app/views/reconciliation-cash-bag.html
@@ -143,5 +143,5 @@
   </div>
   <leave-view-modal></leave-view-modal>
 </div>
-<dynamic-left-nav title="Cash Management"></dynamic-left-nav>
+<dynamic-left-nav title="Reconciliation"></dynamic-left-nav>
 <delete-record-dialog></delete-record-dialog>
