TSVPORTAL-10755: udpate in reconciliation cashbag - cleanump and simplify

--- a/app/views/reconciliation-cash-bag.html
+++ b/app/views/reconciliation-cash-bag.html
@@ -85,7 +85,7 @@
                    id="bankReferenceNumber"
                    ng-model="cashBag.bankReferenceNumber"
                    ng-readonly="readOnly"
-                   custom-focus="isFocusBankReferenceNumber()"/>
+                   custom-focus="false"/>
           </div>
         </div>
 
