TSVPORTAL-10810 - Fixed upload on stock owner

--- a/app/views/stock-owner-item-create.html
+++ b/app/views/stock-owner-item-create.html
@@ -196,7 +196,7 @@
 
 					<fieldset>
 
-						<image-upload ng-hide="isDisabled()"></image-upload>
+						<image-upload image-type="itemImage" form-data-bind="formData" ng-hide="isDisabled()"></image-upload>
 
 						<div id="images-container">
 
